--- a/front-end-angular/src/app/components/admin/instructor/instructor-add/instructor-add.component.html
+++ b/front-end-angular/src/app/components/admin/instructor/instructor-add/instructor-add.component.html
@@ -48,7 +48,9 @@
 
 
 <p-dialog [(visible)]="instructorDialog" [style]="{width: '450px'}" header="Course Details" [modal]="true"
-    styleClass="p-fluid">
+    styleClass="p-fluid" (onHide)="hideDialog()">
+
+    
 
 
     <form [formGroup]="addInstructor">
