--- a/front-end-angular/src/app/components/admin/student/student-add/student-add.component.html
+++ b/front-end-angular/src/app/components/admin/student/student-add/student-add.component.html
@@ -49,7 +49,7 @@
 
 
 <p-dialog [(visible)]="studentDialog" [style]="{width: '450px'}" header="Course Details" [modal]="true"
-    styleClass="p-fluid">
+    styleClass="p-fluid" (onHide)="hideDialog()">
 
 
     <form [formGroup]="addStudent">
