--- a/front-end-angular/src/app/components/admin/student/student-list/student-list.component.html
+++ b/front-end-angular/src/app/components/admin/student/student-list/student-list.component.html
@@ -61,13 +61,14 @@
 </div>
 
 <div *ngIf="isAdding">
-  <app-admin-student-add [studentDialog]="studentDialog" (newStudent)="updateAddedStudents()">
+  <app-admin-student-add [studentDialog]="studentDialog" (newStudent)="updateAddedStudents()"
+    (cancelStudent)="cancel()">
   </app-admin-student-add>
 </div>
 
 
 <div *ngIf="isEditing">
   <app-admin-student-edit [studentDialog]="studentDialog" [student]="student"
-    (editedStudentInfo)="updateEditedStudent($event)">
+    (editedStudentInfo)="updateEditedStudent($event)" (cancelStudent)="cancel()">
   </app-admin-student-edit>
 </div>
