--- a/front-end-angular/src/app/components/admin/course/course-instructor-list/course-instructor-list.component.html
+++ b/front-end-angular/src/app/components/admin/course/course-instructor-list/course-instructor-list.component.html
@@ -1,33 +1,33 @@
-<!-- <ul class="list-group">
-    <div *ngFor="let tempInstructor of instructors">
-      <li class="list-group-item">
-        {{tempInstructor.firstName}}
-        {{tempInstructor.lastName}}
-
-        <button mat-raised-button color="primary"
-        (click)="deleteInstructorFromCourse(tempInstructor.id)">Delete</button>
-        
-        </li>
-    </div>
-  </ul> -->
-
-
-  <p-dialog [(visible)]="instructorDialog" [style]="{width: '450px'}" header="Instructors" [modal]="true"
-  styleClass="p-fluid">
+<p-dialog [(visible)]="instructorDialog" [style]="{width: '450px'}" header="Instructors" [modal]="true"
+  styleClass="p-fluid" (onHide)="hideDialog()">
 
   <p-table [value]="instructors">
-    
-  
+
+    <ng-template pTemplate="header">
+      <tr>
+
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Delete</th>
+
+
+      </tr>
+
+    </ng-template>
+
+
     <ng-template pTemplate="body" let-instructor>
       <tr>
-        <td>{{ instructor.firstName }} {{ instructor.lastName }} 
+        <td>{{ instructor.firstName }} 
         </td>
-        <td></td>
-        <td><button pButton pRipple icon="pi pi-trash" class="p-button-danger p-button-rounded mr-2" (click)="deleteInstructorFromCourse(instructor.id)"></button></td>
+        <td>{{ instructor.lastName }}</td>
+
+        <td><button pButton pRipple icon="pi pi-trash" class="p-button-danger p-button-rounded mr-2 float-center"
+            (click)="deleteInstructorFromCourse(instructor.id)"></button></td>
       </tr>
-  
+
     </ng-template>
   </p-table>
 
-  
+
 </p-dialog>
