--- a/front-end-angular/src/app/components/admin/course/course-student-add/course-student-add.component.html
+++ b/front-end-angular/src/app/components/admin/course/course-student-add/course-student-add.component.html
@@ -1,28 +1,28 @@
-<!-- <ul class="list-group">
-    <div *ngFor="let tempStudent of students">
-      <li class="list-group-item">
-        {{tempStudent.firstName}}
-        {{tempStudent.lastName}}
 
-        <button mat-raised-button color="primary"
-        (click)="addStudentToCourse(tempStudent.id)">Add</button>
-        
-        </li>
-    </div>
-  </ul> -->
-
-  <p-dialog [(visible)]="studentDialog" [style]="{width: '450px'}" header="Students" [modal]="true"
-  styleClass="p-fluid">
+<p-dialog [(visible)]="studentDialog" [style]="{width: '450px'}" header="Students" [modal]="true"
+  styleClass="p-fluid" (onHide)="hideDialog()">
 
   <p-table [value]="students">
+
+    <ng-template pTemplate="header">
+      <tr>
+
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Add</th>
+
+
+      </tr>
+
+    </ng-template>
     
   
     <ng-template pTemplate="body" let-student>
       <tr>
-        <td>{{ student.firstName }} {{ student.lastName }} 
+        <td>{{ student.firstName }} 
         </td>
-        <td></td>
-        <td><button pButton pRipple icon="pi pi-plus" class="p-button-rounded mr-2" (click)="addStudentToCourse(student.id)"></button></td>
+        <td>{{ student.lastName }} </td>
+        <td><button pButton pRipple icon="pi pi-plus" class="p-button-rounded mr-2 float-center" (click)="addStudentToCourse(student.id)"></button></td>
       </tr>
   
     </ng-template>
