--- a/front-end-angular/src/app/components/instructor/student/student-list/student-list.component.html
+++ b/front-end-angular/src/app/components/instructor/student/student-list/student-list.component.html
@@ -1,4 +1,4 @@
-<ul class="list-group">
+<!-- <ul class="list-group">
     <div *ngFor="let tempStudent of students">
       <li class="list-group-item">
         {{tempStudent.firstName}} {{tempStudent.lastName}}
@@ -6,4 +6,44 @@
 
       </li>
     </div>
-  </ul>
+  </ul> -->
+
+
+<p-dialog id="dialog" [(visible)]="studentDialog" [style]="{width: '450px'}" header="Students" [modal]="true"
+  styleClass="p-fluid" (onHide)="hideDialog()">
+
+  <p-table [value]="students">
+
+    <ng-template pTemplate="header">
+      <tr>
+
+        <th>First Name</th>
+        <th>Last Name</th>
+
+
+
+      </tr>
+
+    </ng-template>
+
+
+    <ng-template pTemplate="body" let-student>
+      <tr>
+        <td>{{ student.firstName }}
+        </td>
+        <td>{{ student.lastName }}</td>
+
+    </ng-template>
+    <ng-template pTemplate="emptymessage" let-student>
+      <tr>
+        <td>
+           No Students Found
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+
+  
+
+
+</p-dialog>
