--- a/front-end-angular/src/app/components/student/course/course-list/course-list.component.html
+++ b/front-end-angular/src/app/components/student/course/course-list/course-list.component.html
@@ -1,8 +1,62 @@
-<ul class="list-group">
-    <div *ngFor="let tempCourse of courses">
-      <li class="list-group-item">
-        {{tempCourse.courseName}}       
-  
-      </li>
-    </div>
-</ul>
+<p-toast></p-toast>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
+
+<div class="card">
+  <p-toolbar styleClass="mb-4">
+
+    <ng-template pTemplate="left">
+      <button pButton pRipple label="Add Course" class="p-button-success mr-2" (click)="onAddingCourse()"></button>
+    </ng-template>
+    <ng-template pTemplate="right">
+      <button pButton pRipple label="Logout" class="p-button-danger mr-2" (click)="logout()"></button>
+    </ng-template>
+
+
+  </p-toolbar>
+
+  <p-table #dt [value]="courses" [rows]="10" [paginator]="true" responsiveLayout="scroll" [rowHover]="true" dataKey="id"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+
+    <ng-template pTemplate="caption">
+      <div class="flex align-items-center justify-content-between">
+        <h5 class="m-0">Courses</h5>
+
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="header">
+      <tr>
+
+        <th>Name</th>
+        <th>Description</th>
+
+
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-course>
+      <tr>
+
+        <td>{{ course.courseName }}</td>
+        <td>{{ course.courseDesc }}</td>
+
+
+
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="summary">
+      <div class="flex align-items-center justify-content-between">
+        In total there are {{courses ? courses.length : 0 }} courses.
+      </div>
+    </ng-template>
+
+  </p-table>
+
+
+
+
+</div>
+
+<div *ngIf="isAddingCourse">
+  <app-student-course-add [studentDialog]="studentDialog" (addedCourse)="getAllCoursesForStudentRegistered()" (courseDialogHide)="onHidingDialog()"></app-student-course-add>
+</div>
