last update for the UI

--- a/front-end-angular/src/app/components/admin/instructor/instructor-list/instructor-list.component.html
+++ b/front-end-angular/src/app/components/admin/instructor/instructor-list/instructor-list.component.html
@@ -1,39 +1,4 @@
-<!-- <ul class="list-group">
-    <div *ngFor="let tempInstructor of instructors">
-      <li class="list-group-item">
-        {{tempInstructor.firstName}} {{tempInstructor.lastName}}
 
-        <button mat-raised-button color="primary"
-        (click)="editing(tempInstructor)">Edit</button>
-        /  
-        <button mat-raised-button color="primary"
-          (click)="deleteAnInstructor(tempInstructor)">Delete</button>
-
-      </li>
-    </div>
-  </ul>
-
-  
-
-  <br>
-
-
-<button class="float-right" (click)="adding()">Add</button>
-
-<div *ngIf="isAdding">
-  <app-admin-instructor-add (newInstructor)="updateAddedInstructors($event)"></app-admin-instructor-add>
-</div>
-
-<div *ngIf="isEditing">
-  <app-admin-instructor-edit
-  [instructorId]="instructor.id" 
-  [email]="instructor.email" 
-  [firstName]="instructor.firstName" 
-  [lastName]="instructor.lastName" 
-  [password]="instructor.password"
-  [courses]="instructor.courses"
-  (editedStudentInfo)="updateEditedInstructor($event)"></app-admin-instructor-edit>
-</div> -->
 
 <p-toast></p-toast>
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
@@ -51,7 +16,9 @@
 
   </p-toolbar>
 
-  <p-table #dt [value]="instructors" [rows]="10" [paginator]="true" [globalFilterFields]="['firstName', 'lastName']"
+  
+  <div class="container">
+    <p-table #dt [value]="instructors" [rows]="10" [paginator]="true" [globalFilterFields]="['firstName', 'lastName']"
     responsiveLayout="scroll" [rowHover]="true" dataKey="id"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
 
@@ -94,6 +61,10 @@
     </ng-template>
 
   </p-table>
+  </div>
+  
+
+  
 
 
 </div>
