--- a/front-end-angular/src/app/components/admin/course/course-list/course-list.component.html
+++ b/front-end-angular/src/app/components/admin/course/course-list/course-list.component.html
@@ -15,62 +15,75 @@
 
   </p-toolbar>
 
-  <p-table #dt [value]="courses" [rows]="10" [paginator]="true" responsiveLayout="scroll"
-    [(selection)]="selectedCourses" [rowHover]="true" dataKey="id"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+  <div class="container">
 
-    <ng-template pTemplate="caption">
-      <div class="flex align-items-center justify-content-between">
-        <h5 class="m-0">Courses</h5>
 
-      </div>
-    </ng-template>
 
-    <ng-template pTemplate="header">
-      <tr>
+      <p-table #dt [value]="courses" [rows]="10" [paginator]="true" responsiveLayout="scroll"
+        [(selection)]="selectedCourses" [rowHover]="true" dataKey="id"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
 
-        <th>Name</th>
-        <th>Description</th>
-        <th>Courses</th>
-        <th>Instructors</th>
-        <th>Students</th>
+        <ng-template pTemplate="caption">
+          <div class="flex align-items-center justify-content-between">
+            <h5 class="m-0">Courses</h5>
 
-      </tr>
-    </ng-template>
+          </div>
+        </ng-template>
 
-    <ng-template pTemplate="body" let-course>
-      <tr>
+        <ng-template pTemplate="header">
+          <tr>
 
-        <td>{{ course.courseName }}</td>
-        <td>{{ course.courseDesc }}</td>
-        <td>
-          <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
-            (click)="editCourse(course)"></button>
-          <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
-            (click)="deleteCourse(course)"></button>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Courses</th>
+            <th>Instructors</th>
+            <th>Students</th>
 
-        </td>
-        <td>
-          <button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-success mr-2"
-            (click)="addAnInstructor(course.id)"></button>
-          <button pButton pRipple icon="pi pi-user" class="p-button-rounded p-button-warning"
-            (click)="viewInstructors(course.id)"></button>
-        </td>
-        <td>
-          <button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-success mr-2"
-            (click)="addAStudent(course.id)"></button>
-          <button pButton pRipple icon="pi pi-user" class="p-button-rounded p-button-warning"
-            (click)="viewStudents(course.id)"></button>
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="summary">
-      <div class="flex align-items-center justify-content-between">
-        In total there are {{courses ? courses.length : 0 }} courses.
-      </div>
-    </ng-template>
+          </tr>
+        </ng-template>
 
-  </p-table>
+        <ng-template pTemplate="body" let-course>
+          <tr>
+
+            <td>{{ course.courseName }}</td>
+            <td>{{ course.courseDesc }}</td>
+            <td>
+              <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
+                (click)="editCourse(course)"></button>
+              <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+                (click)="deleteCourse(course)"></button>
+
+            </td>
+            <td>
+              <button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-success mr-2"
+                (click)="addAnInstructor(course.id)"></button>
+              <button pButton pRipple icon="pi pi-user" class="p-button-rounded p-button-warning"
+                (click)="viewInstructors(course.id)"></button>
+            </td>
+            <td>
+              <button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-success mr-2"
+                (click)="addAStudent(course.id)"></button>
+              <button pButton pRipple icon="pi pi-user" class="p-button-rounded p-button-warning"
+                (click)="viewStudents(course.id)"></button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="summary">
+          <div class="flex align-items-center justify-content-between">
+            In total there are {{courses ? courses.length : 0 }} courses.
+          </div>
+        </ng-template>
+
+      </p-table>
+
+
+
+
+
+  </div>
+
+
+
 
 
 </div>
@@ -102,9 +115,11 @@
 </div>
 
 <div *ngIf="isAddingStudent">
-  <app-admin-course-student-add [studentDialog]="studentDialog" [courseId]="courseId" (cancelStudent)="cancel()"></app-admin-course-student-add>
+  <app-admin-course-student-add [studentDialog]="studentDialog" [courseId]="courseId" (cancelStudent)="cancel()">
+  </app-admin-course-student-add>
 </div>
 
 <div *ngIf="isViewingStudent">
-  <app-admin-course-student-list [studentDialog]="studentDialog" [courseId]="courseId" (cancelStudent)="cancel()"></app-admin-course-student-list>
+  <app-admin-course-student-list [studentDialog]="studentDialog" [courseId]="courseId" (cancelStudent)="cancel()">
+  </app-admin-course-student-list>
 </div>
