--- a/front-end-angular/src/app/components/student/course/course-list/course-list.component.html
+++ b/front-end-angular/src/app/components/student/course/course-list/course-list.component.html
@@ -13,44 +13,52 @@
 
 
   </p-toolbar>
+  
+  
+  <div class="container">
+    
+    <p-table #dt [value]="courses" [rows]="10" [paginator]="true" responsiveLayout="scroll" [rowHover]="true" dataKey="id"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+  
+      <ng-template pTemplate="caption">
+        <div class="flex align-items-center justify-content-between">
+          <h5 class="m-0">Courses</h5>
+  
+        </div>
+      </ng-template>
+  
+      <ng-template pTemplate="header">
+        <tr>
+  
+          <th>Name</th>
+          <th></th>
+          <th>Description</th>
+  
+  
+        </tr>
+      </ng-template>
+  
+      <ng-template pTemplate="body" let-course>
+        <tr>
+  
+          <td>{{ course.courseName }}</td>
+          <td></td>
+          <td>{{ course.courseDesc }}</td>
+  
+  
+  
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="summary">
+        <div class="flex align-items-center justify-content-between">
+          In total there are {{courses ? courses.length : 0 }} courses.
+        </div>
+      </ng-template>
+  
+    </p-table>
 
-  <p-table #dt [value]="courses" [rows]="10" [paginator]="true" responsiveLayout="scroll" [rowHover]="true" dataKey="id"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
-
-    <ng-template pTemplate="caption">
-      <div class="flex align-items-center justify-content-between">
-        <h5 class="m-0">Courses</h5>
-
-      </div>
-    </ng-template>
-
-    <ng-template pTemplate="header">
-      <tr>
-
-        <th>Name</th>
-        <th>Description</th>
-
-
-      </tr>
-    </ng-template>
-
-    <ng-template pTemplate="body" let-course>
-      <tr>
-
-        <td>{{ course.courseName }}</td>
-        <td>{{ course.courseDesc }}</td>
-
-
-
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="summary">
-      <div class="flex align-items-center justify-content-between">
-        In total there are {{courses ? courses.length : 0 }} courses.
-      </div>
-    </ng-template>
-
-  </p-table>
+  </div>  
+  
 
 
 
